// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Render should render children 1`] = `
<div
  className="sidemenu-item dropdown dropup"
>
  <a
    className="sidemenu-link"
  >
    <span
      className="icon-circle sidemenu-icon"
    />
  </a>
  <ul
    className="dropdown-menu dropdown-menu--sidemenu"
    role="menu"
  >
    <li
      key="keyboard-shortcuts"
    >
      <a
        onClick={[Function]}
      >
        <i
          className="fa fa-keyboard-o"
        />
         Keyboard shortcuts
      </a>
    </li>
    <li
      key="Docs-0"
    >
      <a
        href="https://grafana.com/docs/grafana/latest/?utm_source=grafana_footer"
        rel="noopener"
        target="_blank"
      >
        <i
          className="fa fa-file-code-o"
        />
        Docs
      </a>
    </li>
    <li
      key="Support & Enterprise-1"
    >
      <a
        href="https://grafana.com/products/enterprise/?utm_source=grafana_footer"
        rel="noopener"
        target="_blank"
      >
        <i
          className="fa fa-support"
        />
        Support & Enterprise
      </a>
    </li>
    <li
      key="Community-2"
    >
      <a
        href="https://community.grafana.com/?utm_source=grafana_footer"
        rel="noopener"
        target="_blank"
      >
        <i
          className="fa fa-comments-o"
        />
        Community
      </a>
    </li>
    <li
      className="side-menu-header"
    >
      <span
        className="sidemenu-item-text"
      />
    </li>
  </ul>
</div>
`;

exports[`Render should render component 1`] = `
<div
  className="sidemenu-item dropdown dropup"
>
  <a
    className="sidemenu-link"
  >
    <span
      className="icon-circle sidemenu-icon"
    />
  </a>
  <ul
    className="dropdown-menu dropdown-menu--sidemenu"
    role="menu"
  >
    <li
      key="keyboard-shortcuts"
    >
      <a
        onClick={[Function]}
      >
        <i
          className="fa fa-keyboard-o"
        />
         Keyboard shortcuts
      </a>
    </li>
    <li
      key="Docs-0"
    >
      <a
        href="https://grafana.com/docs/grafana/latest/?utm_source=grafana_footer"
        rel="noopener"
        target="_blank"
      >
        <i
          className="fa fa-file-code-o"
        />
        Docs
      </a>
    </li>
    <li
      key="Support & Enterprise-1"
    >
      <a
        href="https://grafana.com/products/enterprise/?utm_source=grafana_footer"
        rel="noopener"
        target="_blank"
      >
        <i
          className="fa fa-support"
        />
        Support & Enterprise
      </a>
    </li>
    <li
      key="Community-2"
    >
      <a
        href="https://community.grafana.com/?utm_source=grafana_footer"
        rel="noopener"
        target="_blank"
      >
        <i
          className="fa fa-comments-o"
        />
        Community
      </a>
    </li>
    <li
      className="side-menu-header"
    >
      <span
        className="sidemenu-item-text"
      >
        Hello
      </span>
    </li>
  </ul>
</div>
`;

exports[`Render should render organization switcher 1`] = `
<div
  className="sidemenu-item dropdown dropup"
>
  <a
    className="sidemenu-link"
  >
    <span
      className="icon-circle sidemenu-icon"
    />
  </a>
  <ul
    className="dropdown-menu dropdown-menu--sidemenu"
    role="menu"
  >
    <li
      className="sidemenu-org-switcher"
    >
      <a
        onClick={[Function]}
      >
        <div>
          <div
            className="sidemenu-org-switcher__org-name"
          >
            Grafana
          </div>
          <div
            className="sidemenu-org-switcher__org-current"
          >
            Current Org:
          </div>
        </div>
        <div
          className="sidemenu-org-switcher__switch"
        >
          <i
            className="fa fa-fw fa-random"
          />
          Switch
        </div>
      </a>
    </li>
    <OrgSwitcher
      onDismiss={[Function]}
    />
    <li
      key="keyboard-shortcuts"
    >
      <a
        onClick={[Function]}
      >
        <i
          className="fa fa-keyboard-o"
        />
         Keyboard shortcuts
      </a>
    </li>
    <li
      key="Docs-0"
    >
      <a
        href="https://grafana.com/docs/grafana/latest/?utm_source=grafana_footer"
        rel="noopener"
        target="_blank"
      >
        <i
          className="fa fa-file-code-o"
        />
        Docs
      </a>
    </li>
    <li
      key="Support & Enterprise-1"
    >
      <a
        href="https://grafana.com/products/enterprise/?utm_source=grafana_footer"
        rel="noopener"
        target="_blank"
      >
        <i
          className="fa fa-support"
        />
        Support & Enterprise
      </a>
    </li>
    <li
      key="Community-2"
    >
      <a
        href="https://community.grafana.com/?utm_source=grafana_footer"
        rel="noopener"
        target="_blank"
      >
        <i
          className="fa fa-comments-o"
        />
        Community
      </a>
    </li>
    <li
      className="side-menu-header"
    >
      <span
        className="sidemenu-item-text"
      />
    </li>
  </ul>
</div>
`;

exports[`Render should render subtitle 1`] = `
<div
  className="sidemenu-item dropdown dropup"
>
  <a
    className="sidemenu-link"
  >
    <span
      className="icon-circle sidemenu-icon"
    />
  </a>
  <ul
    className="dropdown-menu dropdown-menu--sidemenu"
    role="menu"
  >
    <li
      className="sidemenu-subtitle"
    >
      <span
        className="sidemenu-item-text"
      >
        subtitle
      </span>
    </li>
    <li
      key="keyboard-shortcuts"
    >
      <a
        onClick={[Function]}
      >
        <i
          className="fa fa-keyboard-o"
        />
         Keyboard shortcuts
      </a>
    </li>
    <li
      key="Docs-0"
    >
      <a
        href="https://grafana.com/docs/grafana/latest/?utm_source=grafana_footer"
        rel="noopener"
        target="_blank"
      >
        <i
          className="fa fa-file-code-o"
        />
        Docs
      </a>
    </li>
    <li
      key="Support & Enterprise-1"
    >
      <a
        href="https://grafana.com/products/enterprise/?utm_source=grafana_footer"
        rel="noopener"
        target="_blank"
      >
        <i
          className="fa fa-support"
        />
        Support & Enterprise
      </a>
    </li>
    <li
      key="Community-2"
    >
      <a
        href="https://community.grafana.com/?utm_source=grafana_footer"
        rel="noopener"
        target="_blank"
      >
        <i
          className="fa fa-comments-o"
        />
        Community
      </a>
    </li>
    <li
      className="side-menu-header"
    >
      <span
        className="sidemenu-item-text"
      />
    </li>
  </ul>
</div>
`;
